[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "machgen-client"
version = "0.1.0"
description = "External client for the MachGen platform - submit tasks via the public API."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
    { name = "MachGen" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "pydantic>=2.12.5",
    "httpx>=0.28.0",
    "httpx-sse>=0.4.0",
]

[project.urls]
Homepage = "https://www.machgen.ai"
Documentation = "https://www.machgen.ai/docs"
Repository = "https://github.com/MachGen/machgen-client"
Issues = "https://github.com/MachGen/machgen-client/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["machgen*"]
namespaces = true
